# mc-bot-egent-practice-1

./: .gitignore  AGENTS.md  Makefile  README.md  constraints.txt  docker-compose.host-services.yml  docker-compose.paper.yml  docker-compose.yml  env.example  env.prod.example  pyproject.toml  requirements.txt
bridge-plugin/: AGENTS.md  build.gradle.kts  settings.gradle.kts
contracts/: transport-envelope.schema.json
docs/: building_state_machine.md  log-2025-10-14-analysis.md  minedojo_integration.md  movement_extension_design.md  tech_stack_diagram.md  tunnel_mode_design.md
node-bot/: AGENTS.md  Dockerfile  bot.ts  commands.md  package-lock.json  package.json  tsconfig.json
plans/: TEMPLATE.md  compose-dev-workflow.md  refactor-foundation-final-validation.md  refactor-foundation-phase7-8.md
python/: AGENTS.md  Dockerfile  __main__.py  actions.py  agent.py  agent_bootstrap.py  agent_lifecycle.py  agent_orchestrator.py  agent_settings.py  bridge_client.py  bridge_role_handler.py  bridge_ws.py  chat_pipeline.py  cli.py  config.py  langgraph_state.py  mc_bot_agent_entrypoint.py  memory.py  perception_service.py  planner.py  planner_config.py  utils.py
scripts/: build-bridge-plugin.sh  dev-up.sh  run-node-bot.sh  run-python-agent-watch.sh  run-python-agent.sh  setup-python-env.sh
tests/: AGENTS.md  test_action_graph_utils.py  test_actions_payloads.py  test_agent_bootstrap.py  test_agent_config.py  test_agent_equip.py  test_agent_mine.py  test_agent_perception.py  test_agent_replan.py  test_agent_task_classification.py  test_bridge_client.py  test_bridge_ws.py  test_building_plan_processor.py  test_cli_agentbridge.py  test_langfuse_tracer.py  test_langgraph_scenarios.py  test_langsmith_tracer.py  test_move_handler.py  test_planner_responses_payload.py  test_planner_thread_config.py  test_reflexion_memory.py  test_structured_logging.py  test_task_router.py  test_tunnel_direction.py  (+1 more)
(+165 files in other folders)
